Fix z-index

--- a/src/components/Hamburger/Hamburger.module.scss
+++ b/src/components/Hamburger/Hamburger.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
   cursor: pointer;
-  z-index: 100;
+  z-index: 99999;
   margin: 20px 20px;
   width: 35px;
   height: 25px;
